--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "react": "19.1.0",
